refactor(backend): Java 21 마이그레이션 관련 deprecated API 및 warning 정리 - URL(String) 생성자를 URI.create(...).toURL() 방식으로 변경 - Spring Security disable DSL 최신 스타일로 수정 - List#get(0)을 getFirst()로 변경 - builder 초기값 유지를 위해 @Builder.Default 추가